@@ -3,6 +3,7 @@ Thu Aug 31 13:14:34 1995  Jim Kingdon  <kingdon@harvey.cyclic.com>
 	* client.c (start_rsh_server): Don't pass -d to "cvs server"
 	invocation via rsh (restore change which was lost when NT stuff
 	was merged in).
+	* sanity.sh: Add TODO item suggesting test for bug which this fixes.
 
 Wed Aug 30 12:36:37 1995  Jim Blandy  <jimb@totoro.cyclic.com>
 
